modified sample file

--- a/Sample.html
+++ b/Sample.html
@@ -4,7 +4,7 @@
 </HEAD>
 <BODY BGCOLOR="FFFFFF">
 <H1> Santhanakannan </H1>
-<H2> Rajkumar </H2>
+<H2> ddd Rajkumar </H2>
 <P> This is a new paragraph!
 <P> <B>This is a new paragraph!</B>
 <BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
